add Publication Resource
